# axum-thirtyfour-server

./: Cargo.toml  README.md  plain_uml.wsd  req.http
libs/webscrapping/: Cargo.toml
libs/webscrapping/src/: artgrid.rs  artlist.rs  domain.rs  lib.rs  utils.rs
libs/webscrapping/tests/: test_http.rs
src/: config.json  main.rs  webdriver.rs
src/admin/: admin.rs
src/file_utils/: file_helpers.rs  mod.rs
src/footager/: artgrid.rs  limiter.rs  mod.rs  user.rs
src/middleware/: bg_thread.rs  cpu.rs  job.rs  limiter.rs  mod.rs  queue.rs
tests/: test_http.rs
webserver/: Cargo.toml
webserver/src/: config.json  main.rs
webserver/src/admin/: mod.rs
webserver/src/file_utils/: file_helpers.rs
webserver/src/footager/: mod.rs  site_dispatch.rs  user.rs
webserver/src/middleware/: bg_thread.rs  cpu.rs  job.rs  mod.rs  queue.rs
webserver/tests/: test_http.rs
