[package]
name = "thirtyfour_zk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
thirtyfour = "0.32.0"
tokio = "1.37.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
eyre = "0.6.12"
reqwest = { version = "0.12.4"}