[package]
name = "thirtyfour_zk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5",  features = ["macros"] }
thirtyfour = "0.32.0"
tokio = { version = "1.38.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
eyre = "0.6.12"
reqwest = { version = "0.12.4"}
lazy_static = "1.4.0"
sysinfo = "0.30.12"
log = { version = "0.4.21", features = ["std"] }
tower = "0.4.13"
