[package]
name = "webserver"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "webserver"

[dependencies]
webscrapping = { path = "../libs/webscrapping" }
axum = { version = "0.7.5",  features = ["macros"] }
fantoccini = { version = "0.20.0-rc.7" }
tokio = { version = "1.38.0", features = ["full"] }
serde = { version = "1.0.201", features = ["derive"] }
serde_json = { version = "1.0.117" }
eyre = "0.6.12"
reqwest = { version = "0.12.4", features = ["json"] }
lazy_static = "1.4.0"
sysinfo = "0.30.12"
log = { version = "0.4.21", features = ["std"] }
tower = { version = "0.4.13", features = ["limit"] }
http = "1.1.0"
tokio-util = "0.7.11"
pin-project = "1.1.5"
rand = "0.9.0-alpha.1"
dotenv = "0.15.0"
crossbeam = "0.8"
hyper = "1.3.1"
hyper-util = "0.1.6"
